# macemu

./: .gitignore  LICENSE  Makefile  README.md  flake.nix  qemu-macos  qemu-macos-cd  twelf-icon-resource-fork
LaunchAPPL/: Dockerfile  Makefile
LaunchAPPL/scripts/: build.sh
assets/: twelf-logo-layer-1.json  twelf-logo-layer-2.json
docker/: Dockerfile  Makefile
docker/app/: CMakeLists.txt  Makefile  api.h  console.c  icon.r  logic.c  logic.h  logic.r  twelf.c  twelf.h  twelf.r  wdefshell.c  wdefshell.r
docker/old-twelf-app/: Makefile  Makefile.nix  clikloop.s  twelf.c  twelf.h
docker/scripts/: build.sh
docker/tesample-app/: Makefile  Makefile.deps  TESample.c  TESample.h  TESample.r  api.h  clikloop.h  consts.h  dialogs.c  dialogs.h  document.h  events.c  events.h  framework.c  global-state.c  global-state.h  handlers.c  handlers.h  menus.c  multiversal-stubs.c  rect-macros.h  resource-consts.h  save-ops.h  scrap.c  scrolling.c  scrolling.h  view-rects.c  view-rects.h  windows.c  windows.h
docker/twelf-app/: Makefile  Makefile.deps  about.c  about.h  api.h  apple-event-handlers.c  apple-event-handlers.h  asmclikloop.h  clikloop.c  clikloop.h  console.c  console.h  consts.h  debug.c  debug.h  dialogs.c  dialogs.h  document.c  document.h  events.c  events.h  (+22 more)
examples/: MacFontUI.c  README.md  TESample.c  TESample.h  TESample.r  textMgr.c
libtwelf/: Dockerfile  Makefile
nix/: mlton-m68k-bin.nix  mlton-m68k-runtime.nix  twelf-bin.nix
scripts/: Makefile  make-icon-resources.js  make-logo-pict.js  palette.js  rez-utils.js  set-bits.js
server/: server.py
(+1 files in other folders)
